--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,16 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.1.Final</version>
+        </dependency>
     </dependencies>
+
+
+
 
     <build>
         <plugins>
